2014-08-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Go back to being
	case-insensitive if all upper-case letters are deleted.
	* info/t/inc-sea-insensitive.sh: New test.

2014-08-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (recalculate_line_starts, calculate_line_starts):
	Renamed.  Don't free 'line_starts' and 'log_line_no'.  Callers
	updated.
	(window_toggle_wrap): Call display_scroll_line_starts as was done
	before.

2014-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_follow_menus): Free error argument before
	overwriting it.
	(info_search_in_node_internal): Set goal column after search.
	(info_search_previous): Work correctly when the match is an exact
	number of screen-fulls away.

	* info/window.c (window_new_screen_size): Try to resize windows
	evenly.

2014-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/m-x.c (info_execute_command): Free a string.  Allow arbitarily
	long prompts.
	* info/info.c (main): Exit with exit() instead of 'return' to avoid
	memory leak report from valgrind for main's local variables.
	(initial_fb): New static variable, taken out of 'main' function.
	(get_initial_file): Don't clobber 'filename' field of dir entry.
	* info/search.c (find_node_in_binding): Free last string allocated in
	a loop.
	* info/session.c (info_search_in_node_internal): Free 'search_string'
	field of WINDOW before overwriting it.
	* info/dir.c (lookup_dir_entry),
	* info/info-utils.c (info_copy_reference, info_copy_references):
	Comments changed.

	* info/t/Init-test.inc: Commented-out line added showing how to run
	tests under valgrind.
	* info/t/Init-inter.inc: Get name of running "ginfo" process from a
	variable.

2014-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (insert_text_into_node): Include terminating null byte
	from node contents.

	* info/info-utils.c (scan_node_contents): Free match list before
	returning.