@@ -1,5 +1,10 @@
 2014-08-30  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/session.c (incremental_search): Update an automatic footnotes
+	window if we change node.
+
+2014-08-30  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/session.c (incremental_search): Go back to being
 	case-insensitive if all upper-case letters are deleted.
 	* info/t/inc-sea-insensitive.sh: New test.
